# nightcrate

./: .gitignore  CLAUDE.md  DB_SCHEMA.md  DB_SCHEMA_DDL.sql  LICENSE  LLM_DB_SPECS.md  Makefile  NightCrate_Equipment_and_Technical_Context.md  PLAN.md  PRIMITIVE_INVENTORY.md  README.md  data-tab.yml  nightcrate-brief.md  nightcrate-current-state-prompt-instructions.md  nightcrate-current-state.md
backend/: pyproject.toml
backend/src/nightcrate/: main.py
backend/tests/: conftest.py  test_aberration.py  test_aberration_api.py  test_admin_api.py  test_api.py  test_app_config.py  test_archive_api.py  test_archive_io.py  test_astronomy.py  test_auto_stretch.py  test_calculators.py  test_calculators_edge_cases.py  test_compute.py  test_config.py  test_coordinate_format.py  test_dew.py  test_diagnostics.py  test_dso_api.py  test_equipment_api.py  test_equipment_mine_counts.py  test_equipment_mine_list.py  test_equipment_mine_toggle.py  test_equipment_resolver.py  test_equipment_schema.py  test_files_api.py  test_fits_header_map.py  test_fits_io.py  test_header_editing.py  test_histogram.py  test_horizon_exporter.py  test_horizon_parser.py  test_horizons_api.py  test_image_annotations.py  test_image_annotations_api.py  test_images_api.py  test_imaging_quality.py  test_imaging_schema.py  test_ingest.py  test_io_binaryio.py  test_location_seeing.py  (+30 more)
backend/tests/catalog_loader/: test_augment_loader.py  test_barnard_loader.py  test_crossref_parser.py  test_external_refs_loader.py  test_loader.py  test_mgc50_augmenter.py  test_mgc50_fetch.py  test_mgc50_parser.py  test_openngc_parser.py  test_redshift_distance.py  test_remote.py  test_sharpless_loader.py  test_vizier_fetch.py  test_vizier_tsv.py  test_wikidata_loader.py  test_wikidata_tsv.py
backend/tests/services/: scoring_helpers.py  test_dso_type_groups.py  test_hips_client.py  test_phd2_fft.py  test_phd2_metrics.py  test_phd2_parser.py  test_phd2_unguided.py  test_planner_annual_hours.py  test_planner_coverage.py  test_planner_now_status.py  test_planner_sky_track.py  test_planner_thumbnails.py  test_planner_visibility.py  test_scoring_combination.py  test_scoring_dimensions.py  test_scoring_gates.py  (+5 more)
(+515 files in other folders)
