[project]
name = "nightcrate"
version = "0.1.0"
description = "Astrophotography session cataloging and analysis"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.21",
    "yoyo-migrations>=8.2",
    "astropy>=7.0",
    "pillow>=11.0",
    "numpy>=2.0",
    "aiofiles>=24.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
nightcrate = "nightcrate.main:run"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "bandit>=1.9.4",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
